--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,25 +1,27 @@
-theme = "lpgn"
-baseURL = "https://leplusgrandnombre.fr"
-defaultContentLanguage = "fr"
+theme        = "lpgn"
+baseURL      = "https://leplusgrandnombre.fr"
+languageCode = "fr"
+title        = "Le Plus Grand Nombre"
 
 enableRobotsTXT = true
-summaryLength = 30
+summaryLength   = 30
+buildDrafts     = false
+buildFuture     = false
 
-buildDrafts = false
-buildFuture = false
+[params]
+  description = "Solutions numériques pour les artisans et professionnels"
 
 [pagination]
   pagerSize = 10
 
 [taxonomies]
-  tag = "tags"
+  tag      = "tags"
   category = "categories"
 
 [sitemap]
-  changefreq = 'weekly'
-  filename = 'sitemap.xml'
-  priority = 0.5
+  changefreq = "weekly"
+  filename   = "sitemap.xml"
+  priority   = 0.5
 
 [outputs]
   home = ["HTML", "RSS"]
-
