--- a/data/apps.yaml
+++ b/data/apps.yaml
@@ -1,3 +1,5 @@
 - name: artisans.ai
   tagline: ""
-  href: "https://artisans.ai"
+  image: ""
+  href_learn: "/applications#artisans-ai"
+  href_try: "https://artisans.leplusgrandnombre.fr"
